--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Take hom test for Outer Bounds - Brendan"
+      content="Take home test for Outer Bounds - Brendan"
     />
 
-    <title>Take hom test for Outer Bounds - Brendan</title>
+    <title>Take home test for Outer Bounds - Brendan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
